Fixed major bug in the displaying of the pictures in the RHS. The cachproblem is gone and the gridbag layout manager is now working and used properly
Synchronization of categories from client to server is now possible, I'm now waiting for some functionallity of the API to fetch the id of a newly uploaded component so this feature will fully work
Fixed bug in synchronization of categories from server to client where sometimes the type of the parent node wasn't correct when searching for a certain node in the tree
Synchronization of categories from server to client is now possible
Fixed a bug in the resizer where it was possible for the lower line to go to far, under the picture
Fixed a bug when going through the tree and find a node. Before, the parent node itself was never checked for the given criteria
Using recursion, it now is possible for each category to have infinite subcategories and albums
Crop and resize code are now made more simple
Rotation improved
Fixed bug found by Aditya: The black transparent background on image while cropping is back and constantly flickers on both Windows and Linux.
Fixed bug found by Aditya: The bottom and left selectors on red box in resize editor doesn't work. Remove them if they are no of any use or add functionality for it.
Fixed bug found by Aditya: Just noticed that ctime attribute in pictures tag in gallery.xml has negative value. I guess you should cast it to long int instead of normal integer. Also filesize should be casted to long int as this value can also go out of range.
Improved the user of the gridbag layout in the picturelist where before there where some refreshing problems showing a lot of parts of pictures
Fixed bug found by Aditya: When I execute the jar file for the very first time, is it supposed to create the albums/userpics/ folder on its own? If yes, then it is not creating it
Fixed bug when deleting an album directly made in the gallery where there was a wrong typecasting of the parent node